--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "locomotive-scroll": "^4.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-slick": "^0.27.13",
