--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
     "locomotive-scroll": "^4.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-feather": "^2.0.9",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
-    "react-slick": "^0.27.13",
-    "react-vfx": "^0.4.1"
+    "react-scripts": "3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
